--- a/index.html
+++ b/index.html
@@ -1,81 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <!-- Hello ! Bienvenue dans la matrice. Codé par mes soins, n'hésitez pas à copier.-->
-<head>
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121214816-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121214816-1');
-</script>
-
-
-
-  <!-- Metas basiques
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>Pierre-Baptiste Borges</title>
-  <meta name="description" content="Site professionnel - CV, Articles & Réseaux Sociaux.">
-  <meta name="author" content="Pierre-Baptiste Borges">
-
-  <!-- Metas mobiles
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Police
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
-  <!-- Chargement des feuilles CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
-  <link rel="stylesheet" href="css/custom.css">
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" href="images/favicon.ico">
-
-  <!-- Scripts
-  ––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-</head>
-
-<!-- Body
-  ––––––––––––––––––––––––––––––––––––––––––––––––– -->
-
-<body>
-
-    <div id="particles-js"></div>
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <script>particlesJS("particles-js", {"particles":{"number":{"value":14,"density":{"enable":true,"value_area":800}},"color":{"value":"#c3c3c3"},"shape":{"type":"circle","stroke":{"width":0,"color":"#000000"},"polygon":{"nb_sides":5},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.5,"random":false,"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":3,"random":true,"anim":{"enable":false,"speed":40,"size_min":0.1,"sync":false}},"line_linked":{"enable":true,"distance":150,"color":"#ffffff","opacity":0.4,"width":1},"move":{"enable":true,"speed":4.734885849793636,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":true,"mode":"repulse"},"onclick":{"enable":true,"mode":"bubble"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":251.74825174825176,"size":11.988011988011989,"duration":0.23976023976023975,"opacity":0.8631368631368631,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});var count_particles, stats, update; stats = new Stats; stats.setMode(0); stats.domElement.style.position = 'absolute'; stats.domElement.style.left = '0px'; stats.domElement.style.top = '0px'; document.body.appendChild(stats.domElement); count_particles = document.querySelector('.js-count-particles'); update = function() { stats.begin(); stats.end(); if (window.pJSDom[0].pJS.particles && window.pJSDom[0].pJS.particles.array) { count_particles.innerText = window.pJSDom[0].pJS.particles.array.length; } requestAnimationFrame(update); }; requestAnimationFrame(update);;</script>
-
-
-<div class="container" style="margin-top: 13%">
-
-
-<center><a class="button" target="_blank" rel="noopener noreferrer" href="docs/CV_BORGES_PB.pdf">CV</a></center>
-<br>
-<br>
-<center><a class="button" target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/pierrebaptisteborges">LinkedIn</a></center>
-<br>
-<br>
-<center><a class="button" target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/pb.bor">Instagram</a></center>
-<br>
-<br>
-<center><a class="button" target="_blank" rel="noopener noreferrer" href="https://twitter.com/pierbapt">Twitter</a></center>
-<br>
-<br>
-<center><a class="button" target="_blank" rel="noopener noreferrer" href="https://pierrebaptiste-borges.medium.com">rticles</a></center>
-
-<br>
-<br>
-<br>
-<br>
-</body>
-</html>
+Bienvenue.
