--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Bienvenue.
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121214816-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-121214816-1');
+</script>
+
+    <meta charset="utf-8">
+    <title>Pierre-Baptiste Borges</title>
+    <meta name="description" content="Personal websites - CV, projects, articles">
+    <meta name="author" content="Pierre-Baptiste Borges">
+    <meta property="og:image" content="images/thumbnail.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="pierrebaptiste.me" />
+    <meta property="og:title" content="Pierre-Baptiste Borges" />
+    <meta property="og:description" content="Personnal website" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
+
