--- a/index.html
+++ b/index.html
@@ -25,3 +25,80 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/custom.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="js/site.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/force-js/0.1.3/force.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+
+</head>
+
+<body>
+
+    <div class="container">
+        <section class="header" style='text-align: left;' data-aos='zoom-in'>
+            <h1 class="title">
+                <center>Pierre-Baptiste Borges</center>
+            </h1>
+            <h5 class="title" style='opacity:0.4;'>
+                <center>Curiosity-driven strategist and nerd</center>
+            </h5>
+        </section><br><br>
+
+
+                <div class="row" style="width: 100%;">
+                    <div class="six columns spacing">
+                        <div class="expCard" onclick="window.open('https://www.linkedin.com/in/pierrebaptisteborges/','_blank');">
+                            <img src="img/Profil_LinkedIn.png" alt="LinkedIn" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                    <div class="six columns spacing">
+                        <div class="expCard"
+                            onclick="window.open('https://twitter.com/pierbapt','_blank');">
+                            <img src="img/Profil_Twitter.png" alt="Twitter" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                    <div class="six columns spacing">
+                        <div class="expCard" onclick="window.open('https://medium.com/@pierrebaptiste-borges','_blank');">
+                            <img src="img/Articles.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                    <div class="six columns spacing">
+                        <div class="expCard" onclick="window.open('https://www.linkedin.com/in/pierrebaptisteborges/','_blank');">
+                            <img src="img/Resume.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                    <div class="six columns spacing">
+                        <div class="expCard" onclick="window.open('https://www.instagram.com/pb.bor/','_blank');">
+                            <img src="img/Profil_Instagram.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                    <div class="six columns spacing">
+                        <div class="expCard" onclick="window.open('mailto:pierrebaptiste.borges@gmail.com','_blank');">
+                            <img src="img/Email.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </div>
+    <script>
+        AOS.init();
+    </script>
+    
+
+</body>
+
+</html>
