--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@
     <script>
         AOS.init();
     </script>
+
+<br><br><br><br <footer>
+    <div style='opacity:0'>
+        <center>© 2021
+            <center>
+    </div>
     
 
 </body>
