--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/force-js/0.1.3/force.min.js"></script>
     <script type="text/javascript" src="slick/slick.min.js"></script>
 
+    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">  
+
 </head>
 
 <body>
