--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                     </div>
                     <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://www.linkedin.com/in/pierrebaptisteborges/','_blank');">
+                        <div class="expCard" onclick="window.open('https://pierrebaptiste.me/files/CV.jpg','_blank');">
                             <img src="img/Resume.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
                         </div>
                     </div>
