Adding Spotify playlists

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
             <h1 class="title">
                 <center>Pierre-Baptiste Borges</center>
             </h1>
-            <h5 class="title" style='opacity:0.4;'>
-                <center>Curiosity-driven strategist and nerd</center>
-            </h5>
         </section><br><br>
 
 
@@ -88,6 +85,37 @@
                         <div class="expCard" onclick="window.open('mailto:pierrebaptiste.borges@gmail.com','_blank');">
                             <img src="img/Email.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
                         </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+                <h5 class="title" style='opacity:0.4;'>
+                    <center>My playlists</center>
+                </h5>
+
+                <div class="row" style="width: 100%;">
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/4hnRnG9BiowYdy8DfcmeR1" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/2TCIPO3tZPwlHPepxPwEji" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/6K6hcekkdpXrys8FM6JZsr" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>                    
+                    </div>
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/2K64c4XOn7oU07mwJMmIXq" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/4diQDIVvy9Mc2RvPGtWpiQ" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+                    </div>
+                    <div class="six columns spacing">
+                        <iframe src="https://open.spotify.com/embed/playlist/1phi9ufzLASdjw9B1CplRi" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                     </div>
                 </div>
 
