--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://pierrebaptiste.me/files/CV.jpg','_blank');">
+                        <div class="expCard" onclick="window.open('https://pierrebaptiste.me/files/CV_BORGES_PierreBaptiste.pdf','_blank');">
                             <img src="img/Resume.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
                         </div>
                     </div>
