Ajout photo + sous-titre

--- a/index.html
+++ b/index.html
@@ -47,10 +47,14 @@
 <body>
 
     <div class="container">
-        <section class="header" style='text-align: left;' data-aos='zoom-in'>
+        <section style='text-align: left;' data-aos='zoom-in'>
+            <div style="padding-top: 15%; padding-bottom: 3%;">
+                <center><img src="img/pierre-baptiste-borges.png" alt="Pierre-Baptiste Borges" width="170" height="170"></center>
+              </div>
             <h1 class="title">
                 <center>Pierre-Baptiste Borges</center>
             </h1>
+            <h7><center>Curiosity-driven student, looking for an end-of-study internship in the consulting field</center></h7>
         </section><br><br>
 
 
