--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <meta charset="utf-8">
     <title>Pierre-Baptiste Borges</title>
-    <meta name="description" content="Personal websites - CV, projects, articles">
+    <meta name="description" content="Personal website - Resume, projects, articles (and playlists)">
     <meta name="author" content="Pierre-Baptiste Borges">
     <meta property="og:image" content="images/thumbnail.jpg" />
     <meta property="og:type" content="website" />
