--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="container">
         <section style='text-align: left;' data-aos='zoom-in'>
             <div style="padding-top: 15%; padding-bottom: 3%;">
-                <center><img src="img/pierre-baptiste-borges.png" alt="Pierre-Baptiste Borges" width="170" height="170"></center>
+                <center><img src="img/photo-pb.png" alt="Pierre-Baptiste Borges" width="170" height="170"></center>
               </div>
             <h1 class="title">
                 <center>Pierre-Baptiste Borges</center>
@@ -75,18 +75,8 @@
                         </div>
                     </div>
                     <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://pierrebaptiste.me/files/Resume_BORGES_PierreBaptiste.pdf','_blank');">
-                            <img src="img/Resume.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                    <div class="six columns spacing">
                         <div class="expCard" onclick="window.open('https://www.instagram.com/pb.bor/','_blank');">
                             <img src="img/Profil_Instagram.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                    <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('mailto:pierrebaptiste.borges@gmail.com','_blank');">
-                            <img src="img/Email.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
                         </div>
                     </div>
                 </div>
