Update website to minimalist design

--- a/index.html
+++ b/index.html
@@ -1,133 +1,56 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="en">
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121214816-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-121214816-1');
-</script>
-
-    <meta charset="utf-8">
-    <title>Pierre-Baptiste Borges</title>
-    <meta name="description" content="Personal website - Resume, projects, articles (and playlists)">
-    <meta name="author" content="Pierre-Baptiste Borges">
-    <meta property="og:image" content="images/thumbnail.jpg" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="pierrebaptiste.me" />
-    <meta property="og:title" content="Pierre-Baptiste Borges" />
-    <meta property="og:description" content="Personnal website" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lexend+Deca&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/custom.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
-
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="js/site.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/force-js/0.1.3/force.min.js"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-
-    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">  
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>pierre-baptiste borges</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>pb</text></svg>">
+    <style>
+        body {
+            font-family: Times New Roman, serif;
+            margin: 40px;
+            line-height: 1.3;
+            max-width: 800px;
+        }
+        h1 {
+            font-size: 24px;
+            font-weight: normal;
+            margin-bottom: 15px;
+        }
+        a {
+            color: blue;
+            text-decoration: none;
+        }
+        .section-title {
+            font-weight: normal;
+            margin-top: 20px;
+            margin-bottom: 5px;
+        }
+        p {
+            margin: 0 0 2px 0;
+        }
+        .role {
+            color: #999999;
+        }
+    </style>
 </head>
-
 <body>
+    <h1>pierre-baptiste borges</h1>
+    <p>(<a href="https://x.com/pierbapt">x</a> / <a href="https://www.linkedin.com/in/pierrebaptisteborges">linkedin</a> / <a href="mailto:pierrebaptiste.borges@gmail.com">email</a>)</p>
 
-    <div class="container">
-        <section style='text-align: left;' data-aos='zoom-in'>
-            <div style="padding-top: 15%; padding-bottom: 3%;">
-                <center><img src="img/photo-pb.png" alt="Pierre-Baptiste Borges" width="170" height="170"></center>
-              </div>
-            <h1 class="title">
-                <center>Pierre-Baptiste Borges</center>
-            </h1>
-        </section><br><br>
+    <h2 class="section-title">works</h2>
+    <p><a href="https://odace.com">odace</a> — content production - <span class="role">head of development</span></p>
+    <p><a href="https://retine.io">rétine</a> — ai surveys - <span class="role">cofounder</span></p>
+    <p><a href="https://jetevois.fr">je te vois</a> — big data analysis - <span class="role">cofounder</span></p>
+    <p>borlain — consulting (sold) - <span class="role">cofounder</span></p>
+    <p><a href="https://lesdecryptages.fr">lesdécryptages.fr</a> — online media - <span class="role">founder</span></p>
 
-
-                <div class="row" style="width: 100%;">
-                    <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://www.linkedin.com/in/pierrebaptisteborges/','_blank');">
-                            <img src="img/Profil_LinkedIn.png" alt="LinkedIn" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                    <div class="six columns spacing">
-                        <div class="expCard"
-                            onclick="window.open('https://twitter.com/pierbapt','_blank');">
-                            <img src="img/Profil_Twitter.png" alt="Twitter" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                    <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://medium.com/@pierrebaptiste-borges','_blank');">
-                            <img src="img/Articles.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                    <div class="six columns spacing">
-                        <div class="expCard" onclick="window.open('https://www.instagram.com/pb.bor/','_blank');">
-                            <img src="img/Profil_Instagram.png" alt="Avatar" class='card-logo' style="width: 60%; height: 60%;">
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-
-                <h5 class="title" style='opacity:0.4;'>
-                    <center>My playlists</center>
-                </h5>
-
-                <div class="row" style="width: 100%;">
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/4hnRnG9BiowYdy8DfcmeR1" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/2TCIPO3tZPwlHPepxPwEji" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/6K6hcekkdpXrys8FM6JZsr" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>                    
-                    </div>
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/2K64c4XOn7oU07mwJMmIXq" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/4diQDIVvy9Mc2RvPGtWpiQ" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                    <div class="six columns spacing">
-                        <iframe src="https://open.spotify.com/embed/playlist/1phi9ufzLASdjw9B1CplRi" width="100%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-
-    </div>
-    <script>
-        AOS.init();
-    </script>
-
-<br><br><br><br <footer>
-    <div style='opacity:0'>
-        <center>© 2022
-            <center>
-    </div>
+    <h2 class="section-title">writing</h2>
+    <p><a href="https://medium.com/@pierrebaptiste-borges/la-v%C3%A9rit%C3%A9-sans-filtre-ce-que-votre-marque-ne-vous-dit-pas-encore-ab74cb287df7">la vérité sans filtre : ce que votre marque ne vous dit pas (encore)</a> <span class="role">— 2024</span></p>
+    <p><a href="https://medium.com/@pierrebaptiste-borges/quest-ce-que-la-qualit%C3%A9-d%C3%A9finir-l-in%C3%A9ffable-36dda4872256">qu'est-ce que la qualité ? définir l'inéffable</a> <span class="role">— 2024</span></p>
+    <p><a href="https://medium.com/@pierrebaptiste-borges/founder-mode-ou-comment-acc%C3%A9l%C3%A9rer-la-cr%C3%A9ation-de-valeur-305860d35fcf">founder mode — ou comment accélérer la création de valeur</a> <span class="role">— 2024</span></p>
+    <p><a href="https://medium.com/@pierrebaptiste-borges/the-great-shift-19da884aa2e5">the great shift: from written text to visual imagery as our primary means of understanding and constructing reality</a> <span class="role">— 2024</span></p>
     
-
+    <p class="role" style="position: fixed; bottom: 20px; left: 40px;">last update: may 2025</p>
 </body>
-
 </html>
