--- a/index.html
+++ b/index.html
@@ -6,31 +6,51 @@
     <title>pierre-baptiste borges</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>pb</text></svg>">
     <style>
+        :root {
+            --background-color: #ffffff;
+            --text-color: #000000;
+            --link-color: blue;
+            --secondary-color: #999999;
+        }
+        
+        @media (prefers-color-scheme: dark) {
+            :root {
+                --background-color: #121212;
+                --text-color: #e0e0e0;
+                --link-color: #6ea8fe;
+                --secondary-color: #808080;
+            }
+        }
+        
         body {
             font-family: Times New Roman, serif;
             margin: 40px;
             line-height: 1.3;
             max-width: 800px;
+            background-color: var(--background-color);
+            color: var(--text-color);
         }
         h1 {
             font-size: 24px;
             font-weight: normal;
             margin-bottom: 15px;
+            color: var(--text-color);
         }
         a {
-            color: blue;
+            color: var(--link-color);
             text-decoration: none;
         }
         .section-title {
             font-weight: normal;
             margin-top: 20px;
             margin-bottom: 5px;
+            color: var(--text-color);
         }
         p {
             margin: 0 0 2px 0;
         }
         .role {
-            color: #999999;
+            color: var(--secondary-color);
         }
     </style>
 </head>
