--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <p><a href="https://medium.com/@pierrebaptiste-borges/founder-mode-ou-comment-acc%C3%A9l%C3%A9rer-la-cr%C3%A9ation-de-valeur-305860d35fcf">founder mode — ou comment accélérer la création de valeur</a> <span class="role">— 2024</span></p>
     <p><a href="https://medium.com/@pierrebaptiste-borges/the-great-shift-19da884aa2e5">the great shift: from written text to visual imagery as our primary means of understanding and constructing reality</a> <span class="role">— 2024</span></p>
     
-    <p class="role" style="position: fixed; bottom: 20px; left: 40px;">last update: may 2025<span style="opacity: 0.3; margin-left: 15px;"><a href="soundbox.html" style="color: var(--secondary-color);">•</a></span></p>
+    <p class="role" style="position: fixed; bottom: 20px; left: 40px;">last update: may 2025<span style="opacity: 0.2; margin-left: 15px;"></p>
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
